Add gradle scripts and fix dependencies

--- a/CCLearner.conf
+++ b/CCLearner.conf
@@ -2,16 +2,16 @@
 # File Path
 #################################################################
 
-source.file.path=/Users/tim/Vorlesungen/dl-se/era-dataset/
+source.file.path=C:/Users/timvs/Documents/era_bcb_sample/era_bcb_sample/
 
-output.dir=/Users/tim/Vorlesungen/dl-se/CCLearner/Output/
+output.dir=C:/Users/timvs/IdeaProjects/CCLearner/Output/
 
-feature.file.path=/Users/tim/Vorlesungen/dl-se/CCLearner/Output/clone_data_train.csv
-model.file.path=/Users/tim/Vorlesungen/dl-se/CCLearner/Output/model.mdl
+feature.file.path=C:/Users/timvs/IdeaProjects/CCLearner/Output/clone_data_train.csv
+model.file.path=C:/Users/timvs/IdeaProjects/CCLearner/Output/model.mdl
 
-pos.file.path=/Users/tim/Vorlesungen/dl-se/CCLearner/Output/pos.csv
-sim.file.path=/Users/tim/Vorlesungen/dl-se/CCLearner/Output/sim.csv
-clones.file.path=/Users/tim/Vorlesungen/dl-se/CCLearner/Output/clone_pairs.csv
+pos.file.path=C:/Users/timvs/IdeaProjects/CCLearner/Output/pos.csv
+sim.file.path=C:/Users/timvs/IdeaProjects/CCLearner/Output/sim.csv
+clones.file.path=C:/Users/timvs/IdeaProjects/CCLearner/Output/clone_pairs.csv
 
 #################################################################
 # PostgreSQL Configuration
