--- a/CCLearner_Test/build.gradle
+++ b/CCLearner_Test/build.gradle
@@ -1,9 +1,15 @@
 plugins {
     id 'java'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
 group 'de.uni_passau'
 version '1.0-SNAPSHOT'
+
+javafx {
+    version = "11.0.2"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
 
 repositories {
     mavenCentral()
@@ -13,10 +19,14 @@ configurations { all*.exclude group: 'org.bytedeco', module: 'javacpp-presets' }
 
 dependencies {
     //implementation 'org.nd4j:nd4j-native-platform:1.0.0-beta7'
+    implementation 'org.eclipse.jdt:core:3.3.0-v_771'
+
     implementation 'org.nd4j:nd4j-cuda-10.2-platform:1.0.0-beta7'
     implementation 'org.deeplearning4j:deeplearning4j-cuda-10.2:1.0.0-beta7'
     implementation 'org.deeplearning4j:deeplearning4j-core:1.0.0-beta7'
     implementation 'org.slf4j:slf4j-simple:1.6.2'
+    implementation 'org.antlr:antlr4:4.5'
+
 
     //implementation 'org.nd4j:nd4j-api:1.0.0-beta7'
     //implementation 'org.nd4j:nd4j-common:1.0.0-beta7'
